# AdventOfCode2023

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
Common/: Solver.hpp  cxxopts.hpp
Day01/: CMakeLists.txt  Day01.cpp  Day01.hpp
Day02/: CMakeLists.txt  Day02.cpp  Day02.hpp
Day03/: CMakeLists.txt  Day03.cpp  Day03.hpp
Day04/: CMakeLists.txt  Day04.cpp  Day04.hpp
Day05/: CMakeLists.txt  Day05.cpp  Day05.hpp
Day06/: CMakeLists.txt  Day06.cpp  Day06.hpp
Day07/: CMakeLists.txt  Day07.cpp  Day07.hpp
Day08/: CMakeLists.txt  Day08.cpp  Day08.hpp  test.txt
Day09/: CMakeLists.txt  Day09.cpp  Day09.hpp
Day1/: Day1.cpp  Day1.hpp  main.cpp
Day10/: CMakeLists.txt  Day10.cpp  Day10.hpp
Day11/: CMakeLists.txt  Day11.cpp  Day11.hpp
Day12/: CMakeLists.txt  Day12.cpp  Day12.hpp
Day13/: CMakeLists.txt  Day13.cpp  Day13.hpp
Day14/: CMakeLists.txt  Day14.cpp  Day14.hpp
Day15/: CMakeLists.txt  Day15.cpp  Day15.hpp
Day16/: CMakeLists.txt  Day16.cpp  Day16.hpp
config/Day01/: Configuration_File.json
config/Day02/: Configuration_File.json
config/Day03/: Configuration_File.json
config/Day04/: Configuration_File.json
config/Day05/: Configuration_File.json
config/Day06/: Configuration_File.json
config/Day07/: Configuration_File.json
config/Day08/: Configuration_File.json
config/Day09/: Configuration_File.json
config/Day10/: Configuration_File.json
config/Day11/: Configuration_File.json
config/Day12/: Configuration_File.json
config/Day13/: Configuration_File.json
config/Day14/: Configuration_File.json
(+2 files in other folders)
